[tool.poetry]
name = "curve-compounder-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["I", "F", "E", "PL"]
ignore = []
fixable = ["ALL"]
exclude = []

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2